# httpuv

./: .Rbuildignore  .gitignore  .gitmodules  .travis.yml  404.html  CONTRIBUTING.html  CONTRIBUTING.md  COPYING-LIBS  DESCRIPTION  LICENSE  LICENSE-text.html  Makefile  NAMESPACE  NEWS  NEWS.md  README.md  _pkgdown.yml  authors.html  cleanup  configure  configure.ac  cran-comments.md  eventloop.files  eventloop.includes  httpuv.Rproj  index.html  pkgdown.yml  sitemap.xml  test.R  webserver.c  webserver.cpp  webserver.hpp
R/: RcppExports.R  decode_uri.R  eventloop.R  httpuv-package.R  httpuv.R  otel.R  random_port.R  rcpp_hello_world.R  server.R  staticServer.R  static_paths.R  utils.R
deflate-client/: README.md  index.mjs  package-lock.json  package.json  server.R
demo/: 00Index  daemon-echo.R  echo.R  json-server.R  socket-hello.R
dev/: CODE_OF_CONDUCT.html  CONTRIBUTING.html  LICENSE-text.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
inst/: test.html
man/: PipeServer.Rd  Server.Rd  WebServer.Rd  WebSocket-class.Rd  WebSocket.Rd  as.staticPath.Rd  encodeURI.Rd  eventloop-package.Rd  getRNGState.Rd  getStatusDescription.Rd  httpuv-package.Rd  interrupt.Rd  ipFamily.Rd  listServers.Rd  logLevel.Rd  randomPort.Rd  rawToBase64.Rd  runPipeServer.Rd  runServer.Rd  runStaticServer.Rd  service.Rd  startDaemonizedServer.Rd  startServer.Rd  staticPath.Rd  staticPathOptions.Rd  stopAllServers.Rd  stopDaemonizedServer.Rd  stopServer.Rd
news/: index.html
reference/: PipeServer.html  Server.html  WebServer.html  WebSocket.html  encodeURI.html  getRNGState.html  httpuv-package.html  index.html  interrupt.html  ipFamily.html  listServers.html  logLevel.html  randomPort.html  rawToBase64.html  runServer.html  runStaticServer.html  service.html  startDaemonizedServer.html  (+6 more)
(+178 files in other folders)
